# ROSRemote

./: CMakeLists.txt  CMakeLists.txt~  arquivos usados  arquivos usados~  package.xml  package.xml~
não utilizados/: main_space_ros (cópia).py  main_space_ros.py  main_space_ros.py~  server.js  server.js~  teste.html  testePySpacebrew.py
não utilizados/bond/drivers/: README.rst
não utilizados/bond/drivers/JavaScript/: bond.json  stage1.js  stage2.js
não utilizados/bond/drivers/PHP/: bond.json  stage1.php  stage2.php
não utilizados/bond/drivers/Perl/: stage1.pl  stage2.pl
não utilizados/bond/drivers/Python/: bond.json  stage1.py  stage2.py
não utilizados/spacebrew/: index.html  index.html~  socket_final.js~  websocket.html  websocket.html~
não utilizados/spacebrew/js/: socket_final.js  socket_final.js~
src/: boolean_client.py  main_cloud_ros.py  main_cloud_ros.py~  roscommands.py  roscommands.py~  rosrun.py  rosrun.py~  rosservice.py  rosservice.py~  rostopic.py  rostopic.py~  sensor.py  sensor.py~  trial.py
src/pySpacebrew/: spacebrew.py
srv/: Comando.srv  Comando.srv~
